# kicad-gtm

./: README.md
kicad-wakatime/: Cargo.toml  metadata.json
kicad-wakatime/src/: lib.rs  main.rs  ui.rs
